# nodety

./: Cargo.toml  LICENSE  README.md  TODO.md  tsReference.ts
.github/workflows/: check.yml
src/: autocomplete.rs  demo_type.rs  lib.rs  nodety.rs  nodety_cached.rs  scope.rs  type.rs  type_expr.rs
src/arbitrary/: mod.rs
src/nodety/: inference.rs  node.rs  validation.rs
src/notation/: format.rs  parse.rs
src/scope/: type_parameter.rs
src/type_expr/: conditional.rs  conversions.rs  node_signature.rs  subtyping.rs  to_type_expr.rs
src/type_expr/node_signature/: candidate.rs
tests/: format_tests.rs  graph_prop.rs  nodety_graph_tests.rs  normalization.rs  parser.rs  parser_roundtrip_prop.rs  scope.rs  type_expr_tests.rs  validator_tests.rs
